# libmime

./: CMakeLists.txt
include/: mime.hpp
src/: dbgen.cpp  mimedb.hpp
